versioned_docs/version-3.2.0/install-expo.mdx
---
id: install-expo
title: Install in Expo project
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import { TileLink } from '../../src/components';

Expo helps you to create universal (iOS, Android and Web) React Native apps with no build configuration.


<Tabs
  defaultValue='new'
  values={[
  { label: 'New Project', value: 'new' },
  { label: 'Existing Project', value: 'existing' }
  ]}>
 <TabItem value="new">

### Create a new project using Expo CLI with NativeBase template

<h4 style={{marginTop:"40px"}} className="mt-10 font-mono">Plain Javascript</h4>
<div style={{maxWidth:"750px"}}>

```bash
expo init my-app --template expo-template-native-base
```

</div>

<h4 className="mt-8 font-mono">With Typescript</h4>
<div style={{maxWidth:"750px"}}>

```bash
expo init my-app --template expo-template-native-base-typescript
```

</div>

Yey! you are all set, start editing App.js/App.tsx now.

</TabItem>
 


<TabItem value="existing">

### Create a new expo project if not exist

```bash
npm install --global expo-cli
expo init my-project
cd my-project/
```

[Refer this link](https://docs.expo.io/) for additional information on Expo and setting up an Expo starter app.

### Install dependencies

  <Tabs
  defaultValue='yarn'
  values={[
  { label: 'yarn', value: 'yarn' },
  { label: 'npm', value: 'npm' }
  ]}>

<TabItem value="yarn">

```bash
yarn add native-base styled-components styled-system
```

  </TabItem>

  <TabItem value="npm">

```bash
npm install native-base styled-components styled-system
```

  </TabItem>

  </Tabs>

```bash
expo install react-native-svg
```

```bash
expo install react-native-safe-area-context
```

### Run the Hello world example

Put the below code in your App.js

```jsx
import React from 'react';
import { NativeBaseProvider, Box } from 'native-base';

export default function App() {
  return (
    <NativeBaseProvider>
      <Box>Hello world</Box>
    </NativeBaseProvider>
  );
}
```



</TabItem>
</Tabs>



<div style={{ textAlign: 'center' }}>
  <img src="/img/minion.gif" alt="minions clapping" />
</div>

<div className="tailwind">
  <div className="mt-4 mb-8">
    <div className="row pl-0 ml-0">
      <TileLink
        title="Customize NativeBaseProvider"
        url="setup-provider"
        description="NativeBaseProvider provides theme throughout your application"
        className="bg-blueGray-600 mt-2"
      />
      <TileLink
        title="Theme"
        url="default-theme"
        description="Read more about the default NativeBase theme and how to override it"
        className="bg-blueGray-600  mt-2"
      />
    </div>
    <div className="row mt-2 pl-0 ml-0">
      <TileLink
        title="Utility props"
        url="utility-props"
        description="Shorthands of commonly used styling props which maps with the provided theme"
        className="bg-blueGray-600"
      />
    </div>
  </div>
</div>
